--- a/res/layout/activity_quiz.xml
+++ b/res/layout/activity_quiz.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="Hey" />
+        android:text="@string/question_text" />
     
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,14 +16,16 @@
         android:orientation="horizontal" >
         
         <Button 
+            android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="true"/>
+            android:text="@string/true_button"/>
         
         <Button
+            android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="false" />
+            android:text="@string/false_button" />
         
     </LinearLayout>
 
