--- a/app/src/main/res/layout-land/first_screen.xml
+++ b/app/src/main/res/layout-land/first_screen.xml
@@ -26,6 +26,14 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/cheat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cheat"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_marginBottom="40dp"/>
+
     <TextView
 
         android:id="@+id/score"
