--- a/app/src/main/res/layout/first_screen.xml
+++ b/app/src/main/res/layout/first_screen.xml
@@ -30,6 +30,11 @@
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/cheat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cheat"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
